<resources>
    <string name="app_name">Fandomovies</string>
    <string name="boton_iniciar_sesion">Iniciar Sesión</string>
    <string name="boton_registrarme">Registrarme</string>
    <string name="password_hint">Contraseña:</string>
    <string name="numero_de_movil_email_hint">Número de móvil o Email</string>
    <string name="numero_de_movil_hint">Número de móvil</string>
    <string name="nombre_apellidos_hint">Nombre y apellidos:</string>
    <string name="nombre_app">Fandomovies</string>
    <string name="registrate_boton">¿No tienes una cuenta? Regístrate.</string>
    <string name="iniciadoCorrecto">Ha iniciado sesión.</string>
    <string name="peliculas">Peliculas</string>
    <string name="credencialesIncorrectasTitle">Credenciales incorrectas</string>
    <string name="credencialesIncorrectas">Los datos que ha introducido no son correctos o la cuenta no existe</string>
    <string name="camposporRellenarTitle">Faltan campos por rellenar</string>
    <string name="camposporRellenar">Rellene todos los campos para poder registrarse</string>
    <string name="emailYaEnUsoTitle">Email en uso</string>
    <string name="emailYaEnUso">Esta dirección de email ya está en uso</string>
    <string name="numMovilYaEnUso">Este número de móvil ya tiene una cuenta registrada</string>
    <string name="numMovilYaEnUsoTitle">Número de móvil en uso</string>
    <string name="inicia_sesion">¿Ya tienes una cuenta? Inicia Sesión.</string>
    <string name="categoria_elegida">Categoria 1</string>
    <string name="tab_numero">Número de móvil</string>
    <string name="tab_email">Email</string>
    <string name="series">Series</string>
    <string name="documentaries">Documentales</string>
    <string name="movies">Películas</string>
    <string name="logo_registro">Logo de registro</string>
    <string name="buscarpeli">Buscar película</string>
    <string name="peli">Películas</string>
    <string name="buscarserie">Buscar serie</string>
    <string name="buscarLupa">Buscar</string>
    <string name="buscardocums">Buscar documental</string>
    <string name="documentales">Documentales</string>
    <string name="titulo">Título</string>
    <string name="carrito">carrito</string>
    <string name="heart">heart like</string>
    <string name="director">Director/a y Año de publicación</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="menu">Menú</string>
    <string name="serie">SERIE</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="item_category">CATEGORÍA</string>
    <string name="infocuenta">Información de la cuenta</string>
    <string name="infocuenta3">Email o número de móvil:</string>
    <string name="deseaCerrarSesion">¿Desea cerrar la sesión de su cuenta? Cerrar sesión.</string>
    <string name="ayuda_text">Ayuda</string>
    <string name="compras">Compras</string>
    <string name="flecha_back">Flecha de back</string>
    <string-array name="prefijosMovil">
        <item>+34</item>
        <item>+48</item>
        <item>+49</item>
        <item>+26</item>
        <item>+25</item>
    </string-array>
    <string name="large_text">

        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="button_trailer">Ver tráiler</string>
    <string name="nombre_pelicula">PELÍCULA</string>
    <string name="nombre_docu">DOCUMENTAL</string>
    <string name="fecha_pelicula">Fecha</string>
    <string name="fecha_serie">Fecha</string>
    <string name="fecha_docu">Fecha</string>
    <string name="descripcion">Descripcion</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="sinopsis_contenido">Prueba de texto para ver el texto en el TextView salta de linea para ajustar el contenido</string>
    <string name="reparto">Reparto</string>
    <string name="nombre_actor_pelicula">Actor Pelicula</string>
    <string name="nombre_actor_serie">Actor Serie</string>
    <string name="nombre_actor_docu">Actor Documental</string>
    <string name="valoraciones">Valoraciones</string>
    <string name="ver_reparto_completo">Ver el reparto completo >></string>
    <string name="_5_estrellas">5 estrellas</string>
    <string name="valoracion_nombre">Usuario</string>
    <string name="ver_valoraciones_completo">Ver todas las valoraciones >></string>
    <string name="buscarItem">Buscar</string>
    <string name="favoritos">Favoritos</string>
    <string name="nohayFavs">Todavía no hay favoritos.</string>
    <string name="eliminarFavTitle">Eliminar favorito</string>
    <string name="eliminarFav">¿Desea eliminar este elemento de la lista de Favoritos?</string>
    <string name="siDelete">Eliminar</string>
    <string name="no">No</string>
    <string name="añadirfavoritotitulo">Añadir a favoritos</string>
    <string name="añadirfavorito">¿Desea añadir este elemento a la lista de Favoritos?</string>
    <string name="siFav">Añadir</string>
    <string name="registradoConExito">Registrado con éxito.</string>
    <string name="siWarning">Okay</string>
    <string name="añadidoConExito">Se ha añadido a la lista de Favoritos</string>
    <string name="realizarcompratitulo">Realizar compra</string>
    <string name="realizarcompra">¿Quiere obtener productos acerca de esta película?</string>
    <string name="siComprar">Comprar</string>
    <string name="borrarItem">Borrar</string>
    <string name="eliminarComprasTitle">Eliminar historial de Compras</string>
    <string name="eliminarCompras">¿Desea eliminar la lista de Compras?</string>
    <string name="usuario_de_prueba">fandomovie@ulpgc.es</string>
</resources>