<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/azulApp"
    android:contentDescription="@string/descripcion"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="75dp"
        android:contentDescription="@string/descripcion"
        android:src="@drawable/logofandomovies" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario_de_prueba"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>