<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:contentDescription="@string/peli"
            tools:srcCompat="@drawable/play" />

        <Space
            android:layout_width="10dp"
            android:layout_height="1dp"
            android:layout_weight="0" />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font"
                android:text="@string/titulo"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/directorypublicacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/director"
                android:textColor="@color/black60"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/likeboton"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/heart"
            tools:srcCompat="@drawable/favorito" />

        <ImageButton
            android:id="@+id/carroboton"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/carrito"
            tools:srcCompat="@drawable/carrito" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>