<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="187dp"
        android:layout_height="179dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/descripcion"
        app:layout_constraintBottom_toTopOf="@+id/moviesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <Button
        android:id="@+id/moviesButton"
        android:layout_width="291dp"
        android:layout_height="88dp"
        android:layout_marginBottom="40dp"
        android:text="@string/movies"
        android:textSize="20sp"
        app:backgroundTint="@color/azulApp"
        app:layout_constraintBottom_toTopOf="@+id/seriesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/seriesButton"
        android:layout_width="291dp"
        android:layout_height="88dp"
        android:layout_marginBottom="40dp"
        android:text="@string/series"
        android:textSize="20sp"
        app:backgroundTint="@color/azulApp"
        app:layout_constraintBottom_toTopOf="@+id/documentaryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/documentaryButton"
        android:layout_width="291dp"
        android:layout_height="88dp"
        android:layout_marginBottom="36dp"
        android:text="@string/documentaries"
        android:textSize="20sp"
        app:backgroundTint="@color/azulApp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>