<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/logo_registro">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        style="@style/Theme.MyFancyTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/azulApp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitleTextColor="@color/white"
        app:titleTextColor="@color/white" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/logo_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        app:srcCompat="@drawable/logoregistrate" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:text="@string/infocuenta"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/layoutBotonInputs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/layoutBotonInputs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginBottom="130dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="328dp"
            android:layout_height="56dp"
            android:text="@string/nombre_apellidos_hint"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Space
            android:id="@+id/espacio1"
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="328dp"
            android:layout_height="56dp"
            android:text="@string/password_hint"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Space
            android:id="@+id/espacioo2"
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="328dp"
            android:layout_height="56dp"
            android:text="@string/infocuenta3"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Space
            android:id="@+id/espacio2"
            android:layout_width="match_parent"
            android:layout_height="20dp" />

    </LinearLayout>

    <Button
        android:id="@+id/botonIniciaSesion"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/rojo"
        android:text="@string/deseaborrar"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>