<androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/documental"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logoCompra"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:contentDescription="@string/peli"
            tools:srcCompat="@drawable/carrito" />

        <Space
            android:layout_width="10dp"
            android:layout_height="1dp"
            android:layout_weight="0" />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/tituloCompra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/directorypublicacionCompra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/director"
                android:textColor="@color/black60"
                android:textSize="12sp" />
        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>